--- a/index.html
+++ b/index.html
@@ -26,9 +26,31 @@
         <div id="web_app" class="vh-100 container-fluid d-flex justify-content-center align-items-center bg-success">
             <main class="row p-0 m-0">
                 <!-- La prima sezione (lista dei contatti) verrà visualizzata se il dispositivo è large (a prescindere che sia attiva o meno la chat) oppure se, con dispositivo small, non è attiva la chat -->
-                <section v-if="((check_if_large) || (!chat_is_active))" id="friends_side" v-bind:class="(check_if_large) ? ('col-4') : ('col-12')"></section>
+                <section v-if="((check_if_large) || (!chat_is_active))" id="friends_side" v-bind:class="(check_if_large) ? ('col-5') : ('col-12')">
+                    <div class="section_header px-3">
+                        <div class="person">
+
+                        </div>
+                        <div class="icons_set">
+                            <span><i class="fa-solid fa-circle-notch"></i></span>
+                            <span><i class="fa-solid fa-message"></i></span>
+                            <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                        </div>
+                    </div>
+                </section>
                 <!-- La seconda sezione (chat) verrà visualizzata se il dispositivo è large (a prescindere che sia attiva o meno la chat) oppure se, con dispositivo small, la chat risulti attiva -->
-                <section v-if="((check_if_large) || (chat_is_active))" id="chat_side" v-bind:class="(check_if_large) ? ('col-8') : ('col-12')"></section>
+                <section v-if="((check_if_large) || (chat_is_active))" id="chat_side" v-bind:class="(check_if_large) ? ('col-7') : ('col-12')">
+                    <div class="section_header px-3">
+                        <div class="person">
+
+                        </div>
+                        <div class="icons_set">
+                            <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                            <span><i class="fa-solid fa-paperclip"></i></span>
+                            <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
     </div>
