--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
                             <a href="#" v-on:click="allow_notifications = !allow_notifications">{{(allow_notifications) ? ("Disattiva notifiche desktop") : ("Attiva notifiche desktop")}}</a>
                         </div>
                     </div>
-                    <div id="search_area">
-                        Area di ricerca da implementare
+                    <div id="search_area" class="px-3 py-1">
+                        <form class="w-100 border border-3 rounded-1 d-flex">
+                            <button class="btn btn-outline-success" type="submit"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
+                            <input class="form-control" type="text" v-model="search_data" placeholder="Cerca o inizia una nuova chat" aria-label="Search" v-on:keyup="searching()">
+                        </form>
                     </div>
                     <div id="contact_list">
                         <div v-for="(item, index) in contacts" :key="index" class="contact ps-3 pe-2" 
