--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <section id="friends_side"
                         v-if="((check_if_large) || (!chat_is_active))"
                         v-bind:class="(check_if_large) ? ('col-5') : ('col-12')" 
-                        v-bind:style="(chat_is_active) ? ('opacity: 0.7') : ('opacity: 1')">
+                        v-bind:style="(chat_is_active) ? ('opacity: 0.7') : ('opacity: 1')" @click="chat_is_active = false">
                     <div class="section_header px-2">
                         <div class="person">
                             <img src="./assets/img/avatar_io.jpg" class="rounded-circle" alt="avatar_personale">
@@ -66,7 +66,7 @@
                     <div id="contact_list">
                         <div v-for="(item, index) in contacts" :key="index" class="contact ps-3 pe-2" 
                         v-bind:class="(index==active_contact) ? ('active') : ('')"
-                        v-bind:style="(!item.visible) ? ('display: none;') : ('')" v-on:click="new_active(index)">
+                        v-bind:style="(!item.visible) ? ('display: none;') : ('')" v-on:click="new_active(index)" @dblclick="chat_is_active = true">
                             <div class="person">
                                 <img v-bind:src="item.avatar" class="rounded-circle" v-bind:alt=`Avatar_nr_${index}`>
                                 <div class="person_details align-self-start">
@@ -82,7 +82,7 @@
                 <section id="chat_side"
                         v-if="((check_if_large) || (chat_is_active))" 
                         v-bind:class="(check_if_large) ? ('col-7') : ('col-12')"
-                        v-bind:style="(chat_is_active) ? ('opacity: 1') : ('opacity: 0.7')">
+                        v-bind:style="(chat_is_active) ? ('opacity: 1') : ('opacity: 0.7')" @click="chat_is_active = true">
                     <div class="section_header px-2">
                         <div class="person">
                             <img v-bind:src="contacts[active_contact].avatar" class="rounded-circle" v-bind:alt=`Avatar_nr_${active_contact}`>
@@ -108,6 +108,7 @@
                         <p v-else class="p-2 border border-3 border-warning rounded-3 text-black-50 bg-info">Non ci sono messaggi da visualizzare. La tua chat con {{contacts[active_contact].name}} è vuota</p>
                     </div>
                     <div id="new_message_area" class="px-2 px-lg-4">
+                        <span v-if="chat_is_active"><i id="back" class="fa-solid fa-hand-point-left fa-beat-fade fs-4 text-primary" v-on:click.stop="chat_is_active = false"></i></span>
                         <span><i class="fa-regular fa-face-smile-beam fs-4"></i></span>
                         <form id="new_message_form">
                             <input class="form-control" type="text" v-model="new_message" placeholder="Scrivi quì un messaggio">
