--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div v-for="(item, index) in contacts" :key="index" class="contact ps-3 pe-2" 
                         v-bind:id=`contact_${index}`
                         v-bind:class="(index==active_contact) ? ('active') : ('')"
-                        v-bind:style="(!item.visible) ? ('display: none;') : ('')" v-on:click="new_active(index)" @dblclick="chat_is_active = true">
+                        v-bind:style="(!item.visible) ? ('display: none;') : ('')" v-on:click.stop="click_on_contact(index)">
                             <div class="person">
                                 <img v-bind:src="item.avatar" class="rounded-circle" v-bind:alt=`Avatar_nr_${index}`>
                                 <div class="person_details align-self-start">
@@ -76,7 +76,10 @@
                                     <span class="show_last_msg" style="font-size: x-small;"><i class="fa-solid fa-file-arrow-up"></i> {{check_last_plus_output(index,3)}}</span>
                                 </div>
                             </div>
-                            <span style="font-size: xx-small;" class="info_last align-self-start">{{check_last_plus_output(index,2)}}</span>
+                            <div id="last_msg_date">
+                                <span style="font-size: x-small;" class="info_last align-self-start"><i class="fa-solid fa-file-arrow-down"></i> {{check_last_plus_output(index,2)}}</span>
+                                <span style="font-size: x-small;" class="info_last align-self-start"><i class="fa-solid fa-file-arrow-up"></i> {{check_last_plus_output(index,4)}}</span>
+                            </div>
                         </div>
                     </div>
                 </section>
