Utilizzo tasti up/down/enter nella lista contatti

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     </div>
                     <div id="search_area" class="px-3 py-1">
                         <form id="search_form" class="w-100 border border-3 rounded-1 d-flex">
-                            <button tabindex="-1" class="btn btn-outline-success" type="submit"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
-                            <input id="data_input" tabindex="-1" class="form-control" type="text" v-model="search_data" placeholder="Cerca o inizia una nuova chat" aria-label="Search" autocomplete="off" v-on:keyup="searching()">
+                            <button class="btn btn-outline-success" type="submit"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
+                            <input id="data_input" class="form-control" type="text" v-model="search_data" placeholder="Cerca o inizia una nuova chat" aria-label="Search" autocomplete="off" v-on:keyup.stop="searching()">
                         </form>
                     </div>
                     <div id="contact_list">
@@ -132,7 +132,7 @@
                         <span v-if="chat_is_active"><i id="back" class="fa-solid fa-hand-point-left fa-beat-fade fs-4 text-primary" v-on:click.stop="leave_chat_area()"></i></span>
                         <span><i class="fa-regular fa-face-smile-beam fs-4"></i></span>
                         <form id="new_message_form">
-                            <input tabindex="-1" class="form-control" type="text" v-model="new_message" placeholder="Scrivi quì un messaggio">
+                            <input class="form-control" type="text" v-model="new_message" placeholder="Scrivi quì un messaggio">
                         </form>
                         <span><i class="fa-solid fa-microphone fs-4"></i></span>
                     </div>
