--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <div id="vue_app">
         <!-- Titolo h1 (dinamico) in position fixed per non sottrarre spazio al contenitore web_app -->
         <h1 class="fixed-top text-center text-white fs-3">Vue Boolzapp <span class="fs-4 text-white-50">{{(check_if_large) ? ('(Large)') : ('(Small)')}}</span></h1>
-        <!-- Ricordarsi di impostare il background a gradiente -->
+        <!-- Contenitore dell'intera pagina (formto web app - 100 viewport height) -->
         <div id="web_app" class="vh-100 container-fluid d-flex justify-content-center align-items-center">
+            <!-- Elemento che si attiva in caso di errori: digitazione di contatto inesistente -->
             <div v-if="some_error" id="error_manager">
                 <div id="error_message" class="row py-3 px-2 px-lg-5 border border-5 border-danger rounded-3 text-danger bg-warning">
                     <p>{{error_array[some_error]}}</p>
@@ -35,18 +36,24 @@
                 <section id="friends_side"
                         v-if="((check_if_large) || (!chat_is_active))"
                         v-bind:class="(check_if_large) ? ('col-5') : ('col-12')" 
-                        v-bind:style="(chat_is_active) ? ('opacity: 0.7') : ('opacity: 1')" @click="leave_chat_area()">
+                        v-bind:style="(chat_is_active) ? ('opacity: 0.7') : ('opacity: 1')" 
+                        v-on:click="leave_chat_area()">
+
+                    <!-- Intestazione della sezione "contatti": avatar, nome, icone (inattive) -->
                     <div class="section_header px-2">
+                        <!-- Gruppo "avatar - nome" -->
                         <div class="person">
                             <img src="./assets/img/avatar_io.jpg" class="rounded-circle" alt="avatar_personale">
                             <span>Sofia</span>
                         </div>
+                        <!-- Gruppo delle icone inattive -->
                         <div class="icons_set">
                             <span><i class="fa-solid fa-circle-notch"></i></span>
                             <span><i class="fa-solid fa-message"></i></span>
                             <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
                         </div>
                     </div>
+                    <!-- Area "notifiche" (dinamica)-->
                     <div id="notifications" class="px-3">
                         <div id="bell_circle" v-on:click="allow_notifications = !allow_notifications">
                             <i v-if="allow_notifications" class="fa-solid fa-bell"></i>
@@ -54,20 +61,30 @@
                         </div>
                         <div id="notifications_text">
                             <span class="text-black-50">Ricevi notifiche messaggi</span>
-                            <a href="#" tabindex="-1" v-on:click="allow_notifications = !allow_notifications">{{(allow_notifications) ? ("Disattiva notifiche desktop") : ("Attiva notifiche desktop")}}</a>
+                            <a href="#" tabindex="-1" v-on:click="allow_notifications = !allow_notifications">
+                                {{(allow_notifications) ? ("Disattiva notifiche desktop") : ("Attiva notifiche desktop")}}
+                            </a>
                         </div>
                     </div>
+                    <!-- Barra di ricerca del contatto -->
+                    <!-- La logica è quella di rendere visibili solo i contatti nel cui nome compare la sequenza di caratteri presente nella barra di ricerca (NON case sensitive), senza peraltro l'attivazione di alcuno di essi. Per l'attivazione bisogna premere enter o cliccare sull'icona, nel qual caso, un apposito metodo ricercherà il contatto e lo attiverà (se presente) oppure attiverà l'"error manager"-->
                     <div id="search_area" class="px-3 py-1">
                         <form id="search_form" class="w-100 border border-3 rounded-1 d-flex">
                             <button class="btn btn-outline-success" type="submit"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
                             <input id="data_input" class="form-control" type="text" v-model="search_data" placeholder="Cerca o inizia una nuova chat" aria-label="Search" autocomplete="off" v-on:keyup.stop="searching()">
                         </form>
                     </div>
+                    <!-- Riquadro di visualizzazione della lista dei contatti -->
                     <div id="contact_list">
-                        <div v-for="(item, index) in contacts" :key="index" class="contact ps-3 pe-2" 
-                        v-bind:id=`contact_${index}`
-                        v-bind:class="(index==active_contact) ? ('active') : ('')"
-                        v-bind:style="(!item.visible) ? ('display: none;') : ('')" v-on:click.stop="click_on_contact(index)">
+                        <div class="contact ps-3 pe-2"
+                            v-for="(item, index) in contacts" 
+                            :key="index"  
+                            v-bind:id=`contact_${index}`
+                            v-bind:class="(index==active_contact) ? ('active') : ('')"
+                            v-bind:style="(!item.visible) ? ('display: none;') : ('')" 
+                            v-on:click.stop="click_on_contact(index)">
+
+                            <!-- Gruppo "avatar - nome contatto - ultimo messaggio inviato dal contatto - ultimo messaggio inviato dall'utente" -->
                             <div class="person">
                                 <img v-bind:src="item.avatar" class="rounded-circle" v-bind:alt=`Avatar_nr_${index}`>
                                 <div class="person_details align-self-start">
@@ -76,19 +93,29 @@
                                     <span class="show_last_msg" style="font-size: x-small;"><i class="fa-solid fa-file-arrow-up"></i> {{check_last_plus_output(index,3)}}</span>
                                 </div>
                             </div>
+                            <!-- Gruppo "date ultimo messaggio inviato dal contatto e dall'utente" -->
                             <div id="last_msg_date">
-                                <span style="font-size: x-small;" class="info_last align-self-start"><i class="fa-solid fa-file-arrow-down"></i> {{check_last_plus_output(index,2)}}</span>
-                                <span style="font-size: x-small;" class="info_last align-self-start"><i class="fa-solid fa-file-arrow-up"></i> {{check_last_plus_output(index,4)}}</span>
+                                <span style="font-size: x-small;" class="info_last align-self-start">
+                                    <i class="fa-solid fa-file-arrow-down"></i> {{check_last_plus_output(index,2)}}
+                                </span>
+                                <span style="font-size: x-small;" class="info_last align-self-start">
+                                    <i class="fa-solid fa-file-arrow-up"></i> {{check_last_plus_output(index,4)}}
+                                </span>
                             </div>
                         </div>
                     </div>
                 </section>
+
                 <!-- La seconda sezione (chat) verrà visualizzata se il dispositivo è large (a prescindere che sia attiva o meno la chat) oppure se, con dispositivo small, la chat risulti attiva -->
                 <section id="chat_side"
                         v-if="((check_if_large) || (chat_is_active))" 
                         v-bind:class="(check_if_large) ? ('col-7') : ('col-12')"
-                        v-bind:style="(chat_is_active) ? ('opacity: 1') : ('opacity: 0.7')" @click="chat_is_active = true">
+                        v-bind:style="(chat_is_active) ? ('opacity: 1') : ('opacity: 0.7')" 
+                        v-on:click="chat_is_active = true">
+                    
+                    <!-- Intestazione della sezione "chat": avatar contatto, nome contatto, data e ora di ultimo accesso (ultimo messaggio inviato) e gruppo icone inattive-->
                     <div class="section_header px-2">
+                        <!-- Gruppo "avatar - nome - data e ora di ultimo accesso" -->
                         <div class="person">
                             <img v-bind:src="contacts[active_contact].avatar" class="rounded-circle" v-bind:alt=`Avatar_nr_${active_contact}`>
                             <div class="person_details">
@@ -96,41 +123,59 @@
                                 <span style="font-size: xx-small;">{{check_last_plus_output(active_contact,0)}}</span>
                             </div>
                         </div>
+                        <!-- Gruppo delle icone inattive -->
                         <div class="icons_set">
                             <span><i class="fa-solid fa-magnifying-glass"></i></span>
                             <span><i class="fa-solid fa-paperclip"></i></span>
                             <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
                         </div>
                     </div>
+                    <!-- Riquadro dei messaggi scambiati tra contatto ed utente -->
                     <div id="chat_messages_area" class="position-relative p-3">
+                        <!-- Capicolonna con numero di messaggi inviati (da contatto e da utente) - visibile solo se vi sia almeno un messaggio scambiato -->
                         <div v-if="contacts[active_contact].messages.length != 0" id="chat_head_text" class="sticky-top w-100">
+                            <!-- Messaggi inviati dal contatto -->
                             <div id="sent_by_active">
                                 <span>Messaggi inviati da {{contacts[active_contact].name}}... ({{check_msg_amount('received')}})</span>
                             </div>
+                            <!-- Messaggi inviati da utente -->
                             <div id="sent_by_me">
                                 <span>Messaggi inviati da me... ({{check_msg_amount('sent')}})</span>
                             </div>
                         </div>
-                        <p v-else class="p-2 border border-3 border-warning rounded-3 text-black-50 bg-info">Non ci sono messaggi da visualizzare. La tua chat con {{contacts[active_contact].name}} è vuota</p>
-                        <div v-for="(item, index) in contacts[active_contact].messages"
+                        <!-- Riquadro informativo di assenza di messaggi scambiati - visibile solo all'occorrenza -->
+                        <p v-else class="p-2 border border-3 border-warning rounded-3 text-black-50 bg-info">
+                            Non ci sono messaggi da visualizzare. La tua chat con {{contacts[active_contact].name}} è vuota
+                        </p>
+                        <!-- Lista dei messaggi scambiati -->
+                        <div class="message position-relative"
+                            v-for="(item, index) in contacts[active_contact].messages"
                             :key="index"
-                            class="message position-relative"
                             v-bind:class="set_message_classes(index)"
                             v-bind:style="(item.status == 'sent') ? ('align-self:flex-end; background-color:lightgreen;') : ('align-self:flex-start; background-color:white;')">
+                            <!-- Icona "cestino" con relativo dropdown menu. -->
+                            <!-- L'icona è visibile (e cliccabile) al passaggio del mouse sul messaggio e solo nel caso in cui il messaggio abbia classe "hoverable" il che è vero solo se risulti attivata la sezione "chat" -->
                             <div class="trash" v-on:click="open_dropdown(index)">
                                 <i class="fa-solid fa-trash-can"></i>
+                                <!-- Dropdown menu con due opzioni -->
                                 <div class="dropdown d-none">
                                     <span v-on:click.stop="delete_message(index)">Cancella messaggio</span>
                                     <span v-on:click.stop="close_dropdown(index)">Non cancellare</span>
                                 </div>
                             </div>
+                            <!-- Informazioni del riquadro "messaggio": testo + data/ora -->
                             <p class="message_p">{{item.message}}</p>
                             <span>{{item.date}}</span>
                         </div>
                     </div>
+                    <!-- Settore "nuovo messaggio": back to contact area/icona smile inattiva/input nuovo messaggio/icona microfono inattiva -->
                     <div id="new_message_area" class="px-2 px-lg-4">
-                        <span v-if="chat_is_active"><i id="back" class="fa-solid fa-hand-point-left fa-beat-fade fs-4 text-primary" v-on:click.stop="leave_chat_area()"></i></span>
+                        <!-- Icona di abbandono della sezione "chat" con conseguente attivazione della sezione "contatti". Visibile solo se la chat è attiva -->
+                        <span v-if="chat_is_active">
+                            <i id="back" class="fa-solid fa-hand-point-left fa-beat-fade fs-4 text-primary" v-on:click.stop="leave_chat_area()"></i>
+                        </span>
                         <span><i class="fa-regular fa-face-smile-beam fs-4"></i></span>
+                        <!-- Form di digitazione del nuovo messaggio -->
                         <form id="new_message_form">
                             <input class="form-control" type="text" v-model="new_message" placeholder="Scrivi quì un messaggio">
                         </form>
@@ -141,8 +186,6 @@
         </div>
     </div>
 
-    <!-- Axios CDN -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
     <!-- Boolean 5 CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Vue 3 CDN -->
